tests/ui/coherence/with-negative-coherence-issue-119381.stderr
error[E0428]: the name `S` is defined multiple times
  --> $DIR/with-negative-coherence-issue-119381.rs:13:1
   |
LL | struct S<const N: [f32; N]>();
   | ------------------------------ previous definition of the type `S` here
...
LL | struct S<const N: usize>([f32; N]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `S` redefined here
   |
   = note: `S` must be defined only once in the type namespace of this module

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/with-negative-coherence-issue-119381.rs:4:25
   |
LL | struct S<const N: [f32; N]>();
   |                         ^ the type must not depend on the parameter `N`
   |
   = note: const parameters may not be used in the type of const parameters

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/with-negative-coherence-issue-119381.rs:4:25
   |
LL | struct S<const N: [f32; N]>();
   |                         ^ the type must not depend on the parameter `N`
   |
   = note: const parameters may not be used in the type of const parameters
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `[f32; N]` is forbidden as the type of a const generic parameter
  --> $DIR/with-negative-coherence-issue-119381.rs:4:19
   |
LL | struct S<const N: [f32; N]>();
   |                   ^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types

error: `[f32; N]` is forbidden as the type of a const generic parameter
  --> $DIR/with-negative-coherence-issue-119381.rs:4:19
   |
LL | struct S<const N: [f32; N]>();
   |                   ^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `S<N>: Clone` is not satisfied
  --> $DIR/with-negative-coherence-issue-119381.rs:10:10
   |
LL | #[derive(Copy)]
   |          ^^^^ the trait `Clone` is not implemented for `S<N>`
   |
note: required by a bound in `Copy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `S<N>` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct S<const N: [f32; N]>();
   |

error: the constant `N` is not of type `[f32; {const error}]`
  --> $DIR/with-negative-coherence-issue-119381.rs:10:10
   |
LL | #[derive(Copy)]
   |          ^^^^ expected `[f32; {const error}]`, found `usize`
   |
note: required by a bound in `S`
  --> $DIR/with-negative-coherence-issue-119381.rs:4:10
   |
LL | struct S<const N: [f32; N]>();
   |          ^^^^^^^^^^^^^^^^^ required by this bound in `S`
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0428, E0770.
For more information about an error, try `rustc --explain E0277`.
